syntax = "proto3";

package compute;

option go_package = "github.com/peertechde/argon/api";

import "google/protobuf/timestamp.proto";

service Storage {
  rpc List(ListRequest) returns (ListResponse);
  rpc Read(ReadRequest) returns (stream ReadResponse);
  rpc Remove(RemoveRequest) returns (RemoveResponse);
  rpc Rename(RenameRequest) returns (RenameResponse);
  rpc Stat(StatRequest) returns (StatResponse);
  rpc Write(stream WriteRequest) returns (WriteResponse);
}

message ListRequest {}

message ListResponse {
  repeated string files = 1;
}

message ReadRequest {
  string name = 1;
}

message ReadResponse {
  bytes data = 1;
}

message RemoveRequest {
  string name = 1;
}

message RemoveResponse {}

message RenameRequest {
  string old = 1;
  string new = 2;
}

message RenameResponse {}

message StatRequest {
  string name = 1;
}

message StatResponse {
  FileInfo file_info = 1;
}

message WriteRequest {
  oneof member {
    string name = 1;
    bytes data = 2;
  }
}

message WriteResponse {}

message FileInfo {
  string name = 1;
  int64 size = 2;
  uint32 mode = 3;
  google.protobuf.Timestamp mod_time = 4;
  bool dir = 5;
}
